force-app/main/default/objects/Opportunity/fields/Block_Hash__c.field-meta.xml
<CustomField>
    <fullName>Block_Hash__c</fullName>
    <label>Block Hash</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>