force-app/main/default/objects/Opportunity/fields/Block_Number__c.field-meta.xml
<CustomField>
    <fullName>Block_Number__c</fullName>
    <label>Block Number</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>