force-app/main/default/objects/Opportunity/fields/Confirmations__c.field-meta.xml
<CustomField>
    <fullName>Confirmations__c</fullName>
    <label>Confirmations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>