force-app/main/default/objects/Opportunity/fields/Contract_Address__c.field-meta.xml
<CustomField>
    <fullName>Contract_Address__c</fullName>
    <label>Contract Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>