force-app/main/default/objects/Opportunity/fields/Cumulative_Gas_Used__c.field-meta.xml
<CustomField>
    <fullName>Cumulative_Gas_Used__c</fullName>
    <label>Cumulative Gas Used</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>