force-app/main/default/objects/Opportunity/fields/From_Address__c.field-meta.xml
<CustomField>
    <fullName>From_Address__c</fullName>
    <label>From Address</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>