force-app/main/default/objects/Opportunity/fields/Gas__c.field-meta.xml
<CustomField>
    <fullName>Gas__c</fullName>
    <label>Gas</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>