force-app/main/default/objects/Opportunity/fields/Gas_Price_in_Eth__c.field-meta.xml
<CustomField>
    <fullName>Gas_Price_in_Eth__c</fullName>
    <label>Gas Price in Eth</label>
    <precision>18</precision>
    <scale>17</scale>
    <type>Number</type>
</CustomField>