force-app/main/default/objects/Opportunity/fields/Gas_Price_in_Wei__c.field-meta.xml
<CustomField>
    <fullName>Gas_Price_in_Wei__c</fullName>
    <label>Gas Price in Wei</label>
    <length>100</length>
    <type>Text</type>
</CustomField>