force-app/main/default/objects/Opportunity/fields/Hash__c.field-meta.xml
<CustomField>
    <fullName>Hash__c</fullName>
    <label>Hash</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>