force-app/main/default/objects/Opportunity/fields/Input__c.field-meta.xml
<CustomField>
    <fullName>Input__c</fullName>
    <label>Input</label>
    <length>100</length>
    <type>Text</type>
</CustomField>