force-app/main/default/objects/Opportunity/fields/isError__c.field-meta.xml
<CustomField>
    <fullName>isError__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isError</label>
    <type>Checkbox</type>
</CustomField>