force-app/main/default/objects/Opportunity/fields/Time_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Time_Stamp__c</fullName>
    <label>Time Stamp</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>