force-app/main/default/objects/Opportunity/fields/To_Address__c.field-meta.xml
<CustomField>
    <fullName>To_Address__c</fullName>
    <label>To Address</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>