force-app/main/default/objects/Opportunity/fields/Transaction_Amount__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Amount__c</fullName>
    <label>Transaction Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>