force-app/main/default/objects/Opportunity/fields/Transaction_Index__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Index__c</fullName>
    <label>Transaction Index</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>