force-app/main/default/objects/Opportunity/fields/Transaction_Rec__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Rec__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transaction Receipt Status</label>
    <type>Checkbox</type>
</CustomField>